fix z-index

--- a/dproject/static/css/base.css
+++ b/dproject/static/css/base.css
@@ -9228,7 +9228,7 @@ html {
   top: 0rem;
   left: .5rem;
   width: 100%;
-  z-index: 1000;
+  z-index: 88;
   font-weight: 700;
   font-size: 1.5rem;
   -webkit-text-fill-color: transparent;
